--- a/estate_nursery/reports/reportplantation_mainnursery_report.xml
+++ b/estate_nursery/reports/reportplantation_mainnursery_report.xml
@@ -2,13 +2,13 @@
 <!--Custom report.-->
 <openerp>
     <data>
-        <template id="report_plantation_div_document">
+        <template id="report_plantation_main_div_document">
             <t t-call="report.external_layout">
                 <div class="page">
                     <!--First Row-->
                         <div class="row">
                             <div class="col-xs-12" style="background-color:#568eff;border: 1px solid #568eff;color:#ffffff;">
-                                <h3>Report Pre Nursery</h3>
+                                <h3>Report Main Nursery</h3>
                             </div>
                         </div>
 
@@ -37,15 +37,17 @@
                                     <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"><p>Selection Information</p></div>
                                     <div class="col-xs-5">
                                         <div class="col-xs-12">
-                                            <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">1</div>
+                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">1</div>
                                             <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">2</div>
                                             <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">3</div>
                                             <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">4</div>
-                                            <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">5</div>
+                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">5</div>
                                             <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">6</div>
                                             <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">7</div>
                                             <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">8</div>
-                                            <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">9</div>
+                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">9</div>
+                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">10</div>
+                                            <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">11</div>
                                         </div>
                                     </div>
                                     <div class="col-xs-2" style="text-align:center;">Total Abnormal</div>
@@ -85,48 +87,58 @@
                                                 <div class="col-xs-5" style="text-align:center; border-left:1px solid #568eff;">
                                                     <t t-foreach="a.selectionline_ids" t-as="s">
                                                         <div class="col-xs-12">
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 10">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 11">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 12">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 13">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 14">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 15">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 16">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 17">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 18">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
+                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
+                                                                <t t-if="s.cause_id.sequence == 19">
+                                                                    <span t-field="s.qty"/>
+                                                                </t>
+                                                            </div>
                                                             <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">
-                                                                <t t-if="s.cause_id.sequence == 1">
-                                                                    <span t-field="s.qty"/>
-                                                                </t>
-                                                            </div>
-                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
-                                                                <t t-if="s.cause_id.sequence == 2">
-                                                                    <span t-field="s.qty"/>
-                                                                </t>
-                                                            </div>
-                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
-                                                                <t t-if="s.cause_id.sequence == 3">
-                                                                    <span t-field="s.qty"/>
-                                                                </t>
-                                                            </div>
-                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
-                                                                <t t-if="s.cause_id.sequence == 4">
-                                                                    <span t-field="s.qty"/>
-                                                                </t>
-                                                            </div>
-                                                            <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">
-                                                                <t t-if="s.cause_id.sequence == 5">
-                                                                    <span t-field="s.qty"/>
-                                                                </t>
-                                                            </div>
-                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
-                                                                <t t-if="s.cause_id.sequence == 6">
-                                                                    <span t-field="s.qty"/>
-                                                                </t>
-                                                            </div>
-                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
-                                                                <t t-if="s.cause_id.sequence == 7">
-                                                                    <span t-field="s.qty"/>
-                                                                </t>
-                                                            </div>
-                                                            <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
-                                                                <t t-if="s.cause_id.sequence == 8">
-                                                                    <span t-field="s.qty"/>
-                                                                </t>
-                                                            </div>
-                                                            <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">
-                                                                <t t-if="s.cause_id.sequence == 9">
+                                                                <t t-if="s.cause_id.sequence == 20">
                                                                     <span t-field="s.qty"/>
                                                                 </t>
                                                             </div>
@@ -147,69 +159,47 @@
                     </div>
 
                     <!-- Fifth ROW -->
-                    <div class="row col-xs-12">
-                        <div class="col-xs-2" style="text-align:right;border: 1px solid #568eff;">
-                            <p><strong>Total:</strong></p>
-                        </div>
-                        <div class="col-xs-1" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
-                            <span t-field="o.total_do"/>
-                        </div>
-                        <div class="col-xs-1" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
-                            <span t-field="o.total_planted"/>
-                        </div>
-                        <div class="col-xs-8" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
+                    <div class="row col-xs-12" style="border: 1px solid #568eff;">
+                        <div class="col-xs-2" >Total</div>
+                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                        <div class="col-xs-8">
                             <div class="col-xs-12">
-                                <div class="col-xs-1" ><p></p></div>
-                                <div class="col-xs-1" ><p></p></div>
-                                <div class="col-xs-1" ><p></p></div>
-                                <div class="col-xs-5" style="border-left:0px;">
+                                <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                <div class="col-xs-5">
                                     <div class="col-xs-12">
-                                        <div class="col-xs-2" style="border-left:1px solid #568eff;">
-                                        </div>
-                                        <div class="col-xs-1" style="border-left:1px solid #568eff;">
-
-                                        </div>
-                                        <div class="col-xs-1" style="border-left:1px solid #568eff;">
-
-                                        </div>
-                                        <div class="col-xs-1" style="border-left:1px solid #568eff;">
-
-                                        </div>
-                                        <div class="col-xs-2" style="border-left:1px solid #568eff;">
-
-                                        </div>
-                                        <div class="col-xs-1" style="border-left:1px solid #568eff;">
-
-                                        </div>
-                                        <div class="col-xs-1" style="border-left:1px solid #568eff;">
-
-                                        </div>
-                                        <div class="col-xs-1" style="border-left:1px solid #568eff;">
-
-                                        </div>
-                                        <div class="col-xs-2" style="border-left:1px solid #568eff;">
-
-                                        </div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                        <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;"></div>
                                     </div>
                                 </div>
-                                <div class="col-xs-2" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
-                                    <span><strong>150.00</strong></span>
-                                </div>
-                                <div class="col-xs-2" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
-                                    <span><strong>150.00</strong></span>
-                                </div>
+                                <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;"></div>
+                                <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;"></div>
                             </div>
                         </div>
+
+
+
                     </div>
 
                 </div>
             </t>
 
         </template>
-        <template id="reportplantation_div_report">
+        <template id="reportplantation_main_div_report">
             <t t-call="report.html_container">
                 <t t-foreach="doc_ids" t-as="doc_id">
-                    <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang','estate_nursery.report_plantation_div_document')"/>
+                    <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang','estate_nursery.report_plantation_main_div_document')"/>
                 </t>
             </t>
         </template>
