[ADD] : estate_nursery : conected stage_id with selectionstage_id, review report main nursery

--- a/estate_nursery/views/report_plantation_view.xml
+++ b/estate_nursery/views/report_plantation_view.xml
@@ -7,34 +7,33 @@
              <field name="inherit_id" ref="estate_nursery.view_seed_batch_form"/>
              <field name="arch" type="xml">
                  <field name="culling_location_id" position="after">
-                     <field name="reportline_id" string="Choose Report"
-                            attrs="{'readonly':[('state','=','done')]}"/>
-                 </field>
-             </field>
-         </record>
-        <!--view , selectionids-->
-         <record model="ir.ui.view" id="view_form_report_plantation">
-             <field name="name">report plantation</field>
-             <field name="model">estate.nursery.selection</field>
-             <field name="inherit_id" ref="estate_nursery.view_form_selection_nursery"/>
-             <field name="arch" type="xml">
-                 <field name="date_plant" position="after">
-                     <field name="reportline_id" string="Choose Report"
-                            attrs="{'invisible': [('state','=','draft')], 'readonly':[('state','=','done')]}"/>
-                 </field>
-             </field>
-         </record>
-        <!--view , selectionlineids-->
-         <record model="ir.ui.view" id="view_form_report_plantation">
-             <field name="name">report plantation</field>
-             <field name="model">estate.nursery.selectionline</field>
-             <field name="inherit_id" ref="estate_nursery.view_form_selectionline"/>
-             <field name="arch" type="xml">
-                 <field name="location_id" position="after">
                      <field name="reportline_id" string="Choose Report"/>
                  </field>
              </field>
          </record>
+        <!--view , selectionids-->
+         <!--<record model="ir.ui.view" id="view_form_report_plantation">-->
+             <!--<field name="name">report plantation</field>-->
+             <!--<field name="model">estate.nursery.selection</field>-->
+             <!--<field name="inherit_id" ref="estate_nursery.view_form_selection_nursery"/>-->
+             <!--<field name="arch" type="xml">-->
+                 <!--<field name="date_plant" position="after">-->
+                     <!--<field name="reportline_id" string="Choose Report"-->
+                            <!--attrs="{'invisible': [('state','=','draft')], 'readonly':[('state','=','done')]}"/>-->
+                 <!--</field>-->
+             <!--</field>-->
+         <!--</record>-->
+        <!--view , selectionlineids-->
+         <!--<record model="ir.ui.view" id="view_form_report_plantation">-->
+             <!--<field name="name">report plantation</field>-->
+             <!--<field name="model">estate.nursery.selectionline</field>-->
+             <!--<field name="inherit_id" ref="estate_nursery.view_form_selectionline"/>-->
+             <!--<field name="arch" type="xml">-->
+                 <!--<field name="location_id" position="after">-->
+                     <!--<field name="reportline_id" string="Choose Report"/>-->
+                 <!--</field>-->
+             <!--</field>-->
+         <!--</record>-->
 
         <!--view ,reportline -->
        <record model="ir.ui.view" id="view_tree_report_plantation">
@@ -71,16 +70,16 @@
 
                                 </tree>
                             </page>
-                            <page string="Report Selection Line">
-                                <tree>
-                                    <field name="selection_ids" />
-                                </tree>
-                            </page>
-                            <page string="Report Selection Line">
-                                <tree>
-                                    <field name="selectionline_ids" />
-                                </tree>
-                            </page>
+                            <!--<page string="Report Selection Line">-->
+                                <!--<tree>-->
+                                    <!--<field name="selection_ids" />-->
+                                <!--</tree>-->
+                            <!--</page>-->
+                            <!--<page string="Report Selection Line">-->
+                                <!--<tree>-->
+                                    <!--<field name="selectionline_ids" />-->
+                                <!--</tree>-->
+                            <!--</page>-->
                         </notebook>
                     </group>
                 </form>
