--- a/estate_nursery/reports/reportplantation_mainnursery_report.xml
+++ b/estate_nursery/reports/reportplantation_mainnursery_report.xml
@@ -76,13 +76,19 @@
                                         <t t-foreach="i.selection_ids" t-as="a">
                                             <div class="col-xs-12">
                                                 <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
-                                                    <span t-field="a.selection_date"/>
+                                                    <t t-if="a.selectionstage_id.stage_id.code == 'MN'">
+                                                        <span t-field="a.selection_date"/>
+                                                    </t>
                                                 </div>
                                                 <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
-                                                    <span t-field="a.selectionstage_id.name"/>
+                                                    <t t-if="a.selectionstage_id.stage_id.code == 'MN'">
+                                                        <span t-field="a.selectionstage_id.name"/>
+                                                    </t>
                                                 </div>
                                                 <div class="col-xs-1" style="text-align:center; border-left:1px solid #568eff;">
-                                                    <span t-field="a.nursery_information"/>
+                                                    <t t-if="a.selectionstage_id.stage_id.code == 'MN'">
+                                                        <span t-field="a.nursery_information"/>
+                                                    </t>
                                                 </div>
                                                 <div class="col-xs-5" style="text-align:center; border-left:1px solid #568eff;">
                                                     <t t-foreach="a.selectionline_ids" t-as="s">
@@ -146,7 +152,9 @@
                                                     </t>
                                                 </div>
                                                 <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">
-                                                    <span t-field="a.qty_abnormal"/>
+                                                    <t t-if="a.selectionstage_id.stage_id.code == 'MN'">
+                                                        <span t-field="a.qty_abnormal"/>
+                                                    </t>
                                                 </div>
                                                 <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">
                                                     <span t-field="a.comment"/>
